# spritz_cipher

./: Cargo.toml  README.md  build.rs
c_examples/: SpritzCipher.c  SpritzCipher.h  spritz.c  spritz.h
examples/: fuzzing.rs  rand_check.rs
src/: lib.rs
tests/: basic.rs  c_check.rs
